WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256113
[iOS] Long-running MSE video leads to jetsam crash in WebKit.GPU process
https://bugs.webkit.org/show_bug.cgi?id=256113
Summary
[iOS] Long-running MSE video leads to jetsam crash in WebKit.GPU process
Jer Noble
Reported
2023-04-28 15:20:00 PDT
[iOS] Long-running MSE video leads to jetsam crash in WebKit.GPU process
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2023-04-28 15:20:08 PDT
<
rdar://problem/108108015
>
Jer Noble
Comment 2
2023-04-28 15:33:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13293
EWS
Comment 3
2023-04-28 17:54:45 PDT
Committed
263525@main
(69d4593edf21): <
https://commits.webkit.org/263525@main
> Reviewed commits have been landed. Closing PR #13293 and removing active labels.
Jer Noble
Comment 4
2023-05-02 11:50:06 PDT
***
Bug 256092
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug